--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react": ">=15.5.0"
   },
   "dependencies": {
-    "prop-types": "^15.7.2"
+    "create-react-class": "^15.6.3",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.5"
   },
   "devDependencies": {
     "babel": "^5.8.38"
